stderr
HikerTest.java:15: error: cannot find symbol
        String actual = hiker.judge(hand);
                        ^
  symbol:   variable hiker
  location: class HikerTest
HikerTest.java:23: error: cannot find symbol
        String actual = hiker.judge(hand);
                        ^
  symbol:   variable hiker
  location: class HikerTest
2 errors
